<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E5E5E5"
    android:orientation="vertical" >

     <TextView
         android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:text="@string/asr_offline_function"
        android:textColor="#999999" />
    
    <LinearLayout
        android:id="@+id/status_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/setting_layout"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
         >

        <LinearLayout
            android:id="@+id/offline_asr_status_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:orientation="vertical" >

   <!--          
             <LinearLayout 
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" 
                 android:orientation="horizontal" > 

                 <TextView 
                     android:id="@+id/status_textview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" 
                     android:text="@string/status"
                     android:textAppearance="?android:attr/textAppearanceMedium" 
                     android:textColor="#202121" 
                     android:textSize="18sp" /> 

                 <TextView 
                     android:id="@+id/status_show_textview" 
                     android:layout_width="wrap_content" 
                     android:layout_height="wrap_content" 
                     android:layout_marginLeft="3dp" 
                     android:textAppearance="?android:attr/textAppearanceMedium" 
                     android:textColor="#202121" 
                     android:textSize="18sp" /> 
             </LinearLayout> 

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/volume_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/volume"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#202121"
                    android:textSize="18sp" />

                <ProgressBar
                    android:id="@+id/progressBarVolume"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="3dp"
                    android:indeterminateOnly="false"
                    android:max="100"
                    android:progressDrawable="@drawable/progressbar_color" />
            </LinearLayout>
            --> 
        </LinearLayout>

        <EditText
            android:id="@+id/textViewResult"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/textbox_background"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/framelayout"
        android:orientation="vertical" >
        
          <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:text="@string/lable_status"
            android:textColor="#999999" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#99938E"
            android:scaleType="fitXY"
            android:tint="#99938E" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#D3D0CE"
            android:scaleType="fitXY"
            android:tint="#D3D0CE" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewTip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_weight="1"
                android:text="@string/function_select"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#202121"
                android:textSize="16sp" />

           
        </FrameLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="#D3D0CE"
            android:scaleType="fitXY"
            android:tint="#D3D0CE" />
        

    </LinearLayout>

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="10dp" >

    </FrameLayout>

    <ImageView
        android:id="@+id/logo_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:src="@drawable/logo" />
    
</RelativeLayout>